force-app/main/default/objects/Service_Queue__c/Service_Queue__c.object-meta.xml
<CustomObject>
    <label>Service Queue</label>
    <nameField>
        <label>Queue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Queues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>