force-app/main/default/objects/Service_Queue__c/fields/Allow_Decline__c.field-meta.xml
<CustomField>
    <fullName>Allow_Decline__c</fullName>
    <label>Allow Decline</label>
    <defaultValue>true</defaultValue>
    <type>Checkbox</type>
</CustomField>