force-app/main/default/objects/Service_Queue__c/fields/Allow_Manual_Pull__c.field-meta.xml
<CustomField>
    <fullName>Allow_Manual_Pull__c</fullName>
    <description>Let agents pull waiting work from this queue instead of only receiving pushed work.</description>
    <label>Allow Manual Pull</label>
    <defaultValue>true</defaultValue>
    <type>Checkbox</type>
</CustomField>