force-app/main/default/objects/Service_Queue__c/fields/Auto_Accept__c.field-meta.xml
<CustomField>
    <fullName>Auto_Accept__c</fullName>
    <description>Skip the accept step - assigned work goes straight to Accepted.</description>
    <label>Auto Accept</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>