force-app/main/default/objects/Service_Queue__c/fields/Business_Hours_Name__c.field-meta.xml
<CustomField>
    <fullName>Business_Hours_Name__c</fullName>
    <description>Optional Business Hours record name. Routing pauses for this queue outside those hours.</description>
    <label>Business Hours Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>