force-app/main/default/objects/Service_Queue__c/fields/Default_Capacity_Weight__c.field-meta.xml
<CustomField>
    <fullName>Default_Capacity_Weight__c</fullName>
    <description>How much of an agent&#x27;s capacity one item from this queue consumes.</description>
    <label>Default Capacity Weight</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
    <defaultValue>1</defaultValue>
</CustomField>