force-app/main/default/objects/Service_Queue__c/fields/Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Developer_Name__c</fullName>
    <description>Stable API-safe key. Routing rules and Flows reference the queue by this value, not by record Id.</description>
    <label>Developer Name</label>
    <length>80</length>
    <externalId>true</externalId>
    <unique>true</unique>
    <required>true</required>
    <type>Text</type>
</CustomField>