force-app/main/default/objects/Service_Queue__c/fields/Max_Queue_Depth_Alert__c.field-meta.xml
<CustomField>
    <fullName>Max_Queue_Depth_Alert__c</fullName>
    <description>Supervisor dashboard turns red above this many waiting items.</description>
    <label>Max Queue Depth Alert</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>