force-app/main/default/objects/Service_Queue__c/fields/Overflow_After_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Overflow_After_Minutes__c</fullName>
    <label>Overflow After Minutes</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>