force-app/main/default/objects/Service_Queue__c/fields/Overflow_Queue__c.field-meta.xml
<CustomField>
    <fullName>Overflow_Queue__c</fullName>
    <description>Where work moves if it waits longer than Overflow After Minutes.</description>
    <label>Overflow Queue</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>Service_Queue__c</referenceTo>
    <relationshipLabel>Overflow Source Queues</relationshipLabel>
    <relationshipName>Overflow_Source_Queues</relationshipName>
    <type>Lookup</type>
</CustomField>