force-app/main/default/objects/Service_Queue__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>Lower number = routed first when an agent is free and several queues have waiting work.</description>
    <label>Priority</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
    <defaultValue>5</defaultValue>
</CustomField>