force-app/main/default/objects/Service_Queue__c/fields/Push_Timeout_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Push_Timeout_Seconds__c</fullName>
    <description>Seconds an agent has to accept before the item is auto-declined and re-routed. 0 = no timeout.</description>
    <label>Push Timeout Seconds</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
    <defaultValue>30</defaultValue>
</CustomField>