force-app/main/default/objects/Service_Queue__c/fields/Routing_Model__c.field-meta.xml
<CustomField>
    <fullName>Routing_Model__c</fullName>
    <description>Which built-in strategy picks the agent. Use External plus Routing Strategy Class for your own Apex.</description>
    <label>Routing Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Least Active</fullName>
                <default>true</default>
                <label>Least Active</label>
            </value>
            <value>
                <fullName>Most Available</fullName>
            </value>
            <value>
                <fullName>Round Robin</fullName>
            </value>
            <value>
                <fullName>Skill Based</fullName>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>