force-app/main/default/objects/Service_Queue__c/fields/Routing_Strategy_Class__c.field-meta.xml
<CustomField>
    <fullName>Routing_Strategy_Class__c</fullName>
    <description>Optional Apex class implementing IRoutingStrategy. Overrides Routing Model when populated.</description>
    <label>Routing Strategy Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>