force-app/main/default/objects/Service_Queue__c/fields/SLA_Minutes__c.field-meta.xml
<CustomField>
    <fullName>SLA_Minutes__c</fullName>
    <description>Minutes from request to first response. Sets Due At on the work item.</description>
    <label>SLA Minutes</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>